fixing bg-image display on iphone with img-compress p6

--- a/css/queries.css
+++ b/css/queries.css
@@ -461,6 +461,9 @@ Instead, 1rem = 1em = 16px */
 				rgba(2, 1, 6, 0.6)
 			),
 			url(../img/hero-img-compress.jpg);
+		background-position: center;
+		background-size: cover;
+		background-attachment: scroll;
 	}
 
 	.hero-text-box {
